<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/add_button"
        android:layout_toEndOf="@id/add_button"
        android:layout_toRightOf="@id/add_button"
        android:text="@string/delete" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/delete_button"
        android:layout_toEndOf="@id/delete_button"
        android:layout_toRightOf="@id/delete_button"
        android:text="@string/change" />

    <Button
        android:id="@+id/delete_all_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/change_button"
        android:layout_toEndOf="@id/change_button"
        android:layout_toRightOf="@id/change_button"
        android:text="@string/delete_all" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/add_button"
        android:text="@string/time_default" />
    
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_alignBottom="@id/time_button"
        android:layout_toEndOf="@id/time_button"
        android:layout_toRightOf="@id/time_button"
        android:layout_toLeftOf="@+id/clear_button"
        android:layout_toStartOf="@id/clear_button"
        android:hint="@string/enter_your_task"
        android:imeOptions="actionDone"
        android:singleLine="true" /> 

    <Button
        android:id="@id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_alignBottom="@id/time_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/X" />       

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/time_button"
        android:drawSelectorOnTop="false" >
    </ListView>

</RelativeLayout>